# UnitRefine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: manual_run.yml  test-cross-platform.yml  test.yml
UnitRefine/: train_manual_curation.py
UnitRefine/apply_model/: model_based_curation.ipynb  model_based_curation_tutorial_using_metrics_files.ipynb
UnitRefine/dataset/: README.md
UnitRefine/experiments/ibl/: 2025-03-25_CosyneBrainHack_UnitRefine_pid.py  2025-03-26_CosyneBrainHack_compare_models.py  2025-04-25_QueryAlejandroLabels.py  2025-07-05_TrainModels.py  2025-07-06_ApplyModel2BWM.py  insertions_with_manual_curation.csv
UnitRefine/models/: README.md
UnitRefine/models/noise_neural_classifier/: README.md  labels.csv  metadata.json  model_accuracies.csv  model_info.json  training_data.csv
UnitRefine/models/sua_mua_classifier/: README.md  labels.csv  model_accuracies.csv  model_info.json  training_data.csv
UnitRefine/plots/: AUCROC_Analysis_Complete.ipynb  SHAP_plots.ipynb
UnitRefine/scripts/: README.md  model_based_curation.py
UnitRefine/train_model/: cluster_group.tsv  train_model_using_sorting_analyzer.ipynb
UnitRefine/tutorial/: README.md  create_sorting_analyzer.ipynb
UnitRefine/tutorial/apply_model/: README.md  all_metrics.csv  apply_model_using_csv_metrics_files.ipynb  apply_model_using_sorting_analyzer.ipynb  model_based_curation.ipynb  model_based_curation_tutorial_using_metrics_files.ipynb
UnitRefine/tutorial/train_model/: README.md  best_model.skops  model_accuracies.csv  model_info.json  model_predictions.csv  (+5 more)
src/unitrefine/: README.md  launch_sigui.py  launch_sigui_validate.py  main.py  train.py
tests/: test_gui_headless.py
(+36 files in other folders)
